DuPont DevSB/src/objects/ConstructionPts__CP_Roles__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__BatchID__c</fullName>
        <label>BatchID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__BidAmount__c</fullName>
        <label>Bid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__BidRank__c</fullName>
        <label>Bid Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CP_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dodge Company</label>
        <referenceTo>ConstructionPts__CP_Company__c</referenceTo>
        <relationshipLabel>Dodge Roles</relationshipLabel>
        <relationshipName>CP_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dodge Contact</label>
        <referenceTo>ConstructionPts__CP_Contact__c</referenceTo>
        <relationshipLabel>Dodge Roles</relationshipLabel>
        <relationshipName>CP_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CP_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dodge Project</label>
        <referenceTo>ConstructionPts__CP_Project__c</referenceTo>
        <relationshipLabel>Dodge Roles</relationshipLabel>
        <relationshipName>CP_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CP_Role_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dodge Role Type</label>
        <referenceTo>ConstructionPts__CP_Role_Type__c</referenceTo>
        <relationshipLabel>Dodge Roles</relationshipLabel>
        <relationshipName>CP_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Contact_Number__c</fullName>
        <formula>ConstructionPts__CP_Contact__r.ConstructionPts__Contact_phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Matched_To__c</fullName>
        <formula>IF(!ISNULL(ConstructionPts__CP_Company__r.ConstructionPts__Account__c) &amp;&amp; (ConstructionPts__CP_Company__r.ConstructionPts__Account__c != &apos;&apos;),  
HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &apos;/&apos; + ConstructionPts__CP_Company__r.ConstructionPts__Account__c, ConstructionPts__CP_Company__r.ConstructionPts__Account__r.Name + &apos; (Account)&apos;, &apos;_parent&apos;), 

IF(!ISNULL(ConstructionPts__CP_Company__r.ConstructionPts__Lead__c) &amp;&amp; (ConstructionPts__CP_Company__r.ConstructionPts__Lead__c != &apos;&apos;), 
HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &apos;/&apos; + ConstructionPts__CP_Company__r.ConstructionPts__Lead__c,  ConstructionPts__CP_Company__r.ConstructionPts__Lead__r.LastName  + &apos; (Lead)&apos;, &apos;_parent&apos;),
 &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Linked To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__RoleProjectID__c</fullName>
        <externalId>true</externalId>
        <label>RoleProjectID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Role_To_Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Role To Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dodge Roles</label>
    <listViews>
        <fullName>ConstructionPts__All</fullName>
        <columns>ConstructionPts__CP_Role_Type__c</columns>
        <columns>ConstructionPts__CP_Company__c</columns>
        <columns>ConstructionPts__CP_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CP Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dodge Roles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>